--- a/css/style.css
+++ b/css/style.css
@@ -87,11 +87,9 @@ Remove the default font size and weight for headings.
 */
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2
+h3
+{
   font-size: inherit;
   font-weight: inherit;
 }
